--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -2,6 +2,5 @@
 $list_to_sort and prints the sorted list in the debug output.
  */
 
-@import '103-sort_list';
-
-@debug $list_to_sort;
+@import '103-sort_list.scss';
+@debug
